--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,34 @@
-<div class="container">
-  <md-list fxFlex>
-    <md-list-item *ngFor="let dish of dishes">
-      <img mdListAvatar src="{{dish.image}}" alt="{{dish.name}}" md-list-avatar>
-      <h1 mdLine>{{ dish.name }}</h1>
-      <p mdLine>
-        <span>{{dish.description}}</span>
-      </p>
-    </md-list-item>
-  </md-list>
-
+<div class="container" fxLayout="column" fxLayoutGap="10px">
+  <div fxFlex>
+    <div>
+      <h3>Menu</h3>
+    </div>
+  </div>
+  <div fxFlex>
+    <md-grid-list cols="2" rowHeight="200px">
+      <md-grid-tile *ngFor="let dish of dishes">
+        <img src="{{dish.image}}" alt="{{dish.name}}" height="200px">
+        <md-grid-tile-footer>
+          <h1>{{ dish.name | uppercase }}</h1>
+        </md-grid-tile-footer>
+      </md-grid-tile>
+    </md-grid-list>
+  </div>
+  <div fxFlex *ngIf="selectedDish">
+    <md-card>
+      <md-card-header>
+        <md-card-title>
+          <h3>{{ selectedDish | uppercase }}</h3>
+        </md-card-title>
+      </md-card-header>
+      <img md-card-image src="{{ selectedDish.image }}" alt="{{ selectedDish.name }}">
+      <md-card-content>
+        <p>{{ selectedDish.description }}</p>
+      </md-card-content>
+      <md-card-actions>
+        <button md-button>LIKE</button>
+        <button md-button>SHARE</button>
+      </md-card-actions>
+    </md-card>
+  </div>
 </div>
