--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
   </div>
   <div fxFlex>
     <md-grid-list cols="2" rowHeight="200px">
-      <md-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
+      <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img src="{{dish.image}}" alt="{{dish.name}}" height="200px">
         <md-grid-tile-footer>
           <h1>{{ dish.name | uppercase }}</h1>
@@ -14,5 +14,4 @@
       </md-grid-tile>
     </md-grid-list>
   </div>
-  <app-dishdetail [dish]="selectedDish"></app-dishdetail>
 </div>
