--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -35,4 +35,48 @@
           </div>
         </div>
       </div>
+      <div fxFlex fxFlexOffset="20px" class="form-size">
+        <h3>Send us your feedback</h3>
+        <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+          <p>
+            <md-input-container class="half-width">
+              <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
+            </md-input-container>
+            <md-input-container class="half-width">
+              <input type="text" mdInput formControlName="lastname" placeholder="Last Name" required>
+            </md-input-container>
+          </p>
+          <p>
+            <md-input-container class="half-width">
+              <input mdInput type="tel" formControlName="telnum" placeholder="Tel. Number" required>
+            </md-input-container>
+            <md-input-container class="half-width">
+              <input mdInput formControlName="email" placeholder="Email" type="email" required>
+            </md-input-container>
+          </p>
+          <table class="form-size">
+            <tr>
+              <td>
+                <md-slide-toggle formControlName="agree">May we contact you?</md-slide-toggle>
+              </td>
+              <td>
+                <md-select placeholder="How?" formControlName="contacttype">
+                  <md-option *ngFor="let ctype of contactType" [value]="ctype">
+                    {{ ctype }}
+                  </md-option>
+                </md-select>
+              </td>
+            </tr>
+          </table>
+          <p>
+            <md-input-container class="full-width">
+              <textarea mdInput formControlName="message" placeholder="Your Feedback" rows="12"></textarea>
+            </md-input-container>
+          </p>
+          <button type="submit" md-button class="background-primary text-floral-white">
+            Submit
+          </button>
+        </form>
+      </div>
 </div>
