--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -40,19 +40,35 @@
         <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
         <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
           <p>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width" 
+              dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">First name is required</span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width"
+              dividerColor="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
               <input type="text" mdInput formControlName="lastname" placeholder="Last Name" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched)">Last name is required</span>
+              </md-hint>
             </md-input-container>
           </p>
           <p>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width"
+              dividerColor="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
               <input mdInput type="tel" formControlName="telnum" placeholder="Tel. Number" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched)">Tel. number is required</span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width"
+              dividerColor="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">
               <input mdInput formControlName="email" placeholder="Email" type="email" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">Email is required</span>
+              </md-hint>
             </md-input-container>
           </p>
           <table class="form-size">
@@ -74,7 +90,8 @@
               <textarea mdInput formControlName="message" placeholder="Your Feedback" rows="12"></textarea>
             </md-input-container>
           </p>
-          <button type="submit" md-button class="background-primary text-floral-white">
+          <button type="submit" md-button class="background-primary text-floral-white" 
+            [disabled]="feedbackForm.invalid">
             Submit
           </button>
         </form>
