--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
       <h3>Menu</h3>
     </div>
   </div>
-  <div fxFlex>
+  <div fxFlex *ngIf="dishes">
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img src="{{dish.image}}" alt="{{dish.name}}" height="200px">
@@ -13,5 +13,9 @@
         </md-grid-tile-footer>
       </md-grid-tile>
     </md-grid-list>
+  </div>
+  <div [hidden]="dishes">
+    <md-spinner></md-spinner>
+    <h4>Loading... Please wait!</h4>
   </div>
 </div>
