Reactive form validation with multiple constraints

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -38,36 +38,37 @@
       <div fxFlex fxFlexOffset="20px" class="form-size">
         <h3>Send us your feedback</h3>
         <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+        <p>{{ formErrors | json }}</p>
         <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
           <p>
             <md-input-container class="half-width" 
-              dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
+              dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
               <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
               <md-hint>
-                <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">First name is required</span>
+                <span [hidden]="!(formErrors.firstname)">{{formErrors.firstname}}</span>
               </md-hint>
             </md-input-container>
             <md-input-container class="half-width"
-              dividerColor="{{(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched) ? 'warn' : 'primary'}}">
+              dividerColor="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
               <input type="text" mdInput formControlName="lastname" placeholder="Last Name" required>
               <md-hint>
-                <span [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched)">Last name is required</span>
+                <span [hidden]="!(formErrors.lastname)">{{formErrors.lastname}}</span>
               </md-hint>
             </md-input-container>
           </p>
           <p>
             <md-input-container class="half-width"
-              dividerColor="{{(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched) ? 'warn' : 'primary'}}">
-              <input mdInput type="tel" formControlName="telnum" placeholder="Tel. Number" required>
+              dividerColor="{{(formErrors.telnum) ? 'warn' : 'primary'}}">
+              <input mdInput type="tel" formControlName="telnum" placeholder="Tel. Number" pattern="[0-9]*" required>
               <md-hint>
-                <span [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched)">Tel. number is required</span>
+                <span [hidden]="!(formErrors.telnum)">{{formErrors.telnum}}</span>
               </md-hint>
             </md-input-container>
             <md-input-container class="half-width"
-              dividerColor="{{(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">
-              <input mdInput formControlName="email" placeholder="Email" type="email" required>
+              dividerColor="{{(formErrors.email)">
+              <input mdInput formControlName="email" placeholder="Email" type="email" email required>
               <md-hint>
-                <span [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched)">Email is required</span>
+                <span [hidden]="!(formErrors.email)">{{formErrors.email}}</span>
               </md-hint>
             </md-input-container>
           </p>
