--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -11,7 +11,7 @@
         <md-card-title>
           <h4>{{dish.name | uppercase}}</h4>
         </md-card-title>
-      <img md-card-image src="{{ dish.image }}" alt="{{dish.name}}">
+      <img md-card-image src="{{ BaseURL + dish.image }}" alt="{{dish.name}}">
       <md-card-content>
         <p>{{dish.description}}</p>
       </md-card-content>
