--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -66,7 +66,7 @@ fxLayoutGap="10px">
         <p mdLine>{{ leader.description }}</p>
       </md-list-item>
     </md-list>
-    <div [hidden]="leaders" fxLayoutAlign="center center">
+    <div [hidden]="leaders">
       <md-spinner></md-spinner>
       <h4>Loading... Please wait!</h4>
     </div>
