--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
   <div fxFlex *ngIf="dishes">
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
-        <img src="{{dish.image}}" alt="{{dish.name}}" height="200px">
+        <img src="{{BaseURL + dish.image}}" alt="{{dish.name}}" height="200px">
         <md-grid-tile-footer>
           <h1>{{ dish.name | uppercase }}</h1>
         </md-grid-tile-footer>
