--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
   </div>
   <div fxFlex *ngIf="dishes">
     <md-grid-list cols="2" rowHeight="200px">
-      <md-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
+      <md-grid-tile appHighlight *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img src="{{BaseURL + dish.image}}" alt="{{dish.name}}" height="200px">
         <md-grid-tile-footer>
           <h1>{{ dish.name | uppercase }}</h1>
@@ -14,11 +14,11 @@
       </md-grid-tile>
     </md-grid-list>
   </div>
-  <div [hidden]="dishes || errMess">
+  <div [hidden]="dishes || errMess" class="center">
     <md-spinner></md-spinner>
     <h4>Loading... Please wait!</h4>
   </div>
-  <div *ngIf="errMess">
+  <div *ngIf="errMess" class="center">
     <h2>Error</h2>
     <h4>{{ errMess }}</h4>
   </div>
