--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
   fxLayoutGap="10px"
   fxLayoutGap.xs="0">
 
-  <div fxFlex="45" *ngIf="dish">
+  <div fxFlex="45" *ngIf="dish" [@visibility]="visibility">
     <md-card>
         <md-card-title>
           <h4>{{dish.name | uppercase}}</h4>
@@ -29,7 +29,7 @@
       </md-card-actions>
     </md-card>
   </div>
-  <div fxFlex="45" *ngIf="dish">
+  <div fxFlex="45" *ngIf="dish" [@visibility]="visibility">
     <md-list>
       <h3 mdSubHeader>Comments</h3>
       <md-list-item *ngFor="let comment of dish.comments">
