Applying custom Animations

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,7 +56,7 @@ fxLayoutGap="10px">
 
    <div fxFlex>
      <h2>Corporate Leadership</h2>
-    <md-list *ngIf="leaders">
+    <md-list *ngIf="leaders" [@expand]>
       <md-list-item *ngFor="let leader of leaders">
         <img mdListAvatar src="{{ leader.image }}" alt="{{ leader.name }}">
         <h3 mdLine> {{ leader.name }} </h3>
