--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
       <h3>Menu</h3>
     </div>
   </div>
-  <div fxFlex *ngIf="dishes">
+  <div fxFlex *ngIf="dishes" [@expand]>
     <md-grid-list cols="2" rowHeight="200px">
       <md-grid-tile appHighlight *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img src="{{BaseURL + dish.image}}" alt="{{dish.name}}" height="200px">
