--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -58,7 +58,7 @@ fxLayoutGap="10px">
      <h2>Corporate Leadership</h2>
     <md-list *ngIf="leaders" [@expand]>
       <md-list-item *ngFor="let leader of leaders">
-        <img mdListAvatar src="{{ leader.image }}" alt="{{ leader.name }}">
+        <img mdListAvatar src="{{ BaseURL + leader.image }}" alt="{{ leader.name }}">
         <h3 mdLine> {{ leader.name }} </h3>
         <p mdLine>
           {{ leader.designation }}
@@ -66,9 +66,13 @@ fxLayoutGap="10px">
         <p mdLine>{{ leader.description }}</p>
       </md-list-item>
     </md-list>
-    <div [hidden]="leaders">
+    <div [hidden]="leaders || leaderErroMess">
       <md-spinner></md-spinner>
       <h4>Loading... Please wait!</h4>
+    </div>
+    <div *ngIf="leadersErrMess">
+      <h2>Error</h2>
+      <h4>{{ leadersErrMess }}</h4>
     </div>
   </div>
 </div>
